✨feat(scoring): 핵심 필드 불일치 시에만 상한 50을 적용하도록 조건부 cap 전환
EvidenceSnapshot에 mismatchedFields를 추가해 Gemini 필드별 불일치를 받아오고, 불일치가 없으면 상한 없이 최대 100점까지 산출한다. 함께 호출되지 않던 GoogleFcAdapter를 제거하고 outOfScope 패턴을 등록하며 source-count-threshold 기본값과 주석을 1로 맞춘다.

Co-Authored-By: Claude Opus 4.8 (1M context) <noreply@anthropic.com>